--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_es.properties
@@ -24,7 +24,9 @@ delete-certificate=Eliminar certificado
 download-certificate=Descargar certificado
 dsa=DSA
 encrypted=Cifrado
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Certificado de cifrado y clave privada
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Entidad
 entity-id-help=ID de entidad es un identificador único que puede tener 1024 caracteres de longitud como máximo.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Es necesario establecer el ID de entidad antes de poder generar una clave privada y un certificado.
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Tipo de atributo de identificador de nombre
 name-identifier-format=Formato de identificador de nombre
 new-identity-provider=Nuevo proveedor de identidades
 new-service-provider=Nuevo proveedor de servicios
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Unidad de organización
 persistent=Persistente
 please-create-a-signing-credential-before-enabling=Cree una credencial de firma antes de habilitarlo.
@@ -80,6 +84,7 @@ service-provider-defaults=Valores predeterminados del proveedor de servicios
 service-provider-metadata-help=Especifique una URL a los metadatos del proveedor de servicios o cargue un archivo XML de metadatos. Al especificar una URL, los metadatos se actualizan periódicamente. Asegúrese de que los metadatos contienen el certificado de firma del proveedor de servicios.
 signature-algorithm=Algoritmo de firma
 subject-dn=DN de asunto
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=No hay proveedores de identidades.
 there-are-no-service-providers=No hay proveedores de servicios.
 transient=Temporal
@@ -94,3 +99,7 @@ validity-days=Validez (días)
 windows-domain-qualified-name=Nombre completo de dominio de Windows
 x509-subject-name=Nombre de firmante de X509
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Debe configurar como mínimo una conexión de proveedores de identidades para que SAML funcione.
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
