--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
@@ -24,7 +24,9 @@ delete-certificate=Poista Varmenne
 download-certificate=Lataa Varmenne
 dsa=DSA
 encrypted=Salattu
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Salausvarmenne ja Yksityinen Avain
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Yksikkö
 entity-id-help=Merkinnän tunnus on yksikäsitteinen tunniste, joka voi olla enintään 1024 merkkiä pitkä.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entiteetin tunnus on määritettävä ennen kuin yksityisen avaimen ja sertifikaatin voi luoda.
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Nimitunnisteen Määritteen Tyyppi
 name-identifier-format=Nimitunnisteen Muoto
 new-identity-provider=Uusi Identiteetin Tarjoaja
 new-service-provider=Uusi Palveluntarjoaja
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Organisaatioyksikkö
 persistent=Jatkuva
 please-create-a-signing-credential-before-enabling=Luo allekirjoitusvarmenne ennen käyttöönottoa.
@@ -80,6 +84,7 @@ service-provider-defaults=Palveluntarjoajan Oletukset
 service-provider-metadata-help=Anna joko URL palveluntarjoajan metatietoihin tai lataa metatieto-XML-tiedosto. Kun annat URL-osoitteen, metatietoja päivitetään jaksollisesti. Varmista, että metatiedot sisältävät palveluntarjoajan allekirjoitussertifikaatin.
 signature-algorithm=Allekirjoitusalgoritmi
 subject-dn=Aihe DN
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Ei ole identiteetin tarjoajia.
 there-are-no-service-providers=Ei ole palveluntarjoajia.
 transient=Ohimenevä
@@ -94,3 +99,7 @@ validity-days=Voimassaolo (päiviä)
 windows-domain-qualified-name=Windowsin Toimialueen Täydellinen Nimi
 x509-subject-name=X509-aihenimi
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Sinun on määritettävä vähintään yksi identiteetintarjoajayhteys, jotta SAML toimii.
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
