--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_hu.properties
@@ -24,7 +24,9 @@ delete-certificate=Tanúsítvány törlése
 download-certificate=Tanúsítvány letöltése
 dsa=DSA
 encrypted=Titkosított
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Titkosítás tanúsítványa és privát kulcsa
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Entitás
 entity-id-help=Az entitásazonosító egy legfeljebb 1024 karakter hosszúságú egyedi azonosító.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=A privát kulcs és a tanúsítvány generálása előtt be kell állítani az entitásazonosítót.
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Névazonosító attribútumtípusa
 name-identifier-format=Névazonosító formátuma
 new-identity-provider=Új identitásszolgáltató
 new-service-provider=Új szolgáltató
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Szervezeti egység
 persistent=Állandó
 please-create-a-signing-credential-before-enabling=Engedélyezés előtt hozzon létre aláírási hitelesítőadatokat.
@@ -80,6 +84,7 @@ service-provider-defaults=Szolgáltató alapértelmezett adatai
 service-provider-metadata-help=Adja meg a szolgáltató metaadatainak az URL-címét, vagy töltsön fel egy XML-fájlt a metaadatokkal. Ha URL-címet ad meg, a metaadatok rendszeresen frissítődnek majd. Győződjön meg róla, hogy a metaadatok tartalmazzák a szolgáltató aláírási tanúsítványát.
 signature-algorithm=Aláírás-algoritmus
 subject-dn=Tulajdonos DN
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Nincsenek identitásszolgáltatók.
 there-are-no-service-providers=Nincsenek szolgáltatók.
 transient=Tranziens
@@ -94,3 +99,7 @@ validity-days=Érvényesség (napokban)
 windows-domain-qualified-name=Windows minősített tartománynév
 x509-subject-name=X509 tulajdonos neve
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=A SAML működéséhez konfigurálnia kell legalább egy identitásszolgáltató csatlakozását.
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
