--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_it.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_it.properties
@@ -24,7 +24,9 @@ delete-certificate=Elimina il certificato (Automatic Translation)
 download-certificate=Scarica il certificato (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Crittografato (Automatic Translation)
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Certificato di crittografia e chiave privata (Automatic Translation)
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Entità (Automatic Translation)
 entity-id-help=Entità ID è un identificatore univoco che può essere fino a 1024 caratteri. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=ID entità deve essere impostata prima di chiave privata e il certificato può essere generato. (Automatic Translation)
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Nome tipo di identificatore dell'attributo (Autom
 name-identifier-format=Nome dell'identificatore formato (Automatic Translation)
 new-identity-provider=Nuovo Provider di identità (Automatic Translation)
 new-service-provider=Nuovo servizio Provider (Automatic Translation)
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Unità organizzativa (Automatic Translation)
 persistent=Persistente (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Si prega di creare una credenziale firma prima dell'attivazione. (Automatic Translation)
@@ -80,6 +84,7 @@ service-provider-defaults=Service Provider predefiniti (Automatic Translation)
 service-provider-metadata-help=Fornire un URL per i metadati del servizio provider o caricare un file di metadati XML. Quando si fornisce un URL, i metadati viene aggiornato periodicamente. Assicurarsi che i metadati contengono il certificato di firma del fornitore di servizi. (Automatic Translation)
 signature-algorithm=Algoritmo di firma (Automatic Translation)
 subject-dn=DN soggetto (Automatic Translation)
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Non esistono Nessun provider di identità. (Automatic Translation)
 there-are-no-service-providers=Non ci sono nessun provider di servizi. (Automatic Translation)
 transient=Transitori (Automatic Translation)
@@ -94,3 +99,7 @@ validity-days=Validità (giorni) (Automatic Translation)
 windows-domain-qualified-name=Nome completo di dominio di Windows (Automatic Translation)
 x509-subject-name=X 509 nome soggetto (Automatic Translation)
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=È necessario configurare la connessione del provider di almeno un'identità per SAML alla funzione. (Automatic Translation)
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
