--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_iw.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_iw.properties
@@ -24,7 +24,9 @@ delete-certificate=למחוק אישור (Automatic Translation)
 download-certificate=הורד אישור
 dsa=DSA
 encrypted=מוצפן
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=אישור ההצפנה ואת מפתח פרטי (Automatic Translation)
+encryption-forced=Force Encryption (Automatic Copy)
 entity=ישות
 entity-id-help=מזהה ישות הוא מזהה ייחודי באורך של עד 1024 תווים.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=מזהה הישות חייב להיות מוגדר לפני הפקת מפתח פרטי ואישור.
@@ -55,6 +57,8 @@ name-identifier-attribute-type=שם תכונת מזהה שם
 name-identifier-format=פורמט מזהה שם
 new-identity-provider=ספק זהות חדשה (Automatic Translation)
 new-service-provider=ספק שירות חדש
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=יחידה ארגונית
 persistent=קבוע
 please-create-a-signing-credential-before-enabling=אנא צור אישור חתימה לפני ההפעלה.
@@ -80,6 +84,7 @@ service-provider-defaults=ברירות המחדל של ספק השירות
 service-provider-metadata-help=ספק כתובת URL עבור המטא-דאטה של ספק השירות או העלה קובץ XML של מטא-דאטה. כאשר אתה מספק כתובת URL, המטא-דאטה מתעדכן מעת לעת. ודא שהמטא-דאטה מכיל את אישור החתימה של ספק השירות.
 signature-algorithm=אלגוריתם החתימה
 subject-dn=DN הנושא
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=ישנם ספקי אין זהות. (Automatic Translation)
 there-are-no-service-providers=אין ספקי שירות.
 transient=ארעי
@@ -94,3 +99,7 @@ validity-days=תוקף (ימים)
 windows-domain-qualified-name=השם המסווג של דומיין Windows
 x509-subject-name=X509 שם הנושא
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=עליך להגדיר זהות אחת לפחות ספק החיבור SAML לפונקציה. (Automatic Translation)
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
