--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_ja.properties
@@ -24,7 +24,9 @@ delete-certificate=証明書を削除
 download-certificate=証明書をダウンロード
 dsa=DSA
 encrypted=暗号化済み
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=暗号化証明書と秘密鍵
+encryption-forced=Force Encryption (Automatic Copy)
 entity=エンティティ
 entity-id-help=エンティティIDは最大1024文字の一意な識別子である必要があります。
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=プライベートキーの前にエンティティIDを設定する必要があります。それにより証明書が生成できます。
@@ -55,6 +57,8 @@ name-identifier-attribute-type=名前識別子属性タイプ
 name-identifier-format=名前識別子フォーマット
 new-identity-provider=新規アイデンティティ・プロバイダー
 new-service-provider=新規サービスプロバイダー
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=組織単位
 persistent=永続的
 please-create-a-signing-credential-before-enabling=有効にする前に、署名入り認証情報を作成してください。
@@ -80,6 +84,7 @@ service-provider-defaults=サービス・プロバイダーデフォルト
 service-provider-metadata-help=サービス・プロバイダーにURLを指定するか、メタデータXMLファイルをアップロードします。URLを提供する場合、メタデータは定期的に更新されます。メタデータにサービス・プロバイダーの署名された証明書が含まれていることを確認してください。
 signature-algorithm=署名アルゴリズム
 subject-dn=サブジェクトDN
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=アイデンティティ・プロバイダーはありません。
 there-are-no-service-providers=サービスプロバイダーはありません。
 transient=一時的な値
@@ -94,3 +99,7 @@ validity-days=有効期限（日）
 windows-domain-qualified-name=Windowsドメイン修飾名
 x509-subject-name=X509 サブジェクト名
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=SAMLを機能させるには少なくともアイデンティティ・プロバイダー１つ設定してください。
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
