--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_nb.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_nb.properties
@@ -24,7 +24,9 @@ delete-certificate=Slette sertifikatet (Automatic Translation)
 download-certificate=Last ned sertifikat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Kryptert (Automatic Translation)
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Krypteringssertifikatet og privat nøkkel (Automatic Translation)
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Enhet (Automatic Translation)
 entity-id-help=Enhets-ID er en unik identifikator som kan inneholde opptil 1024 tegn. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Enhets-ID må angis før private nøkkel og sertifikat kan genereres. (Automatic Translation)
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Navnet identifikator attributtype (Automatic Tran
 name-identifier-format=Identifikator formatet (Automatic Translation)
 new-identity-provider=Nye identitetsleverandøren (Automatic Translation)
 new-service-provider=Ny tjenesteleverandør (Automatic Translation)
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Organisasjonsenhet (Automatic Translation)
 persistent=Vedvarende (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Opprett en signering legitimasjon før. (Automatic Translation)
@@ -80,6 +84,7 @@ service-provider-defaults=Service Provider standarder (Automatic Translation)
 service-provider-metadata-help=Gi enten en URL til leverandøren tjenestemetadata eller laste opp en metadata XML-fil. Når du angir en URL-adresse, oppdateres jevnlig metadataene. Kontroller metadataene inneholder signeringssertifikatet til tjenesteleverandøren. (Automatic Translation)
 signature-algorithm=Signaturalgoritmen (Automatic Translation)
 subject-dn=Emnet DN (Automatic Translation)
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Det finnes ingen identitetsleverandører. (Automatic Translation)
 there-are-no-service-providers=Det er ingen-leverandører. (Automatic Translation)
 transient=Forbigående (Automatic Translation)
@@ -94,3 +99,7 @@ validity-days=Gyldighet (dager) (Automatic Translation)
 windows-domain-qualified-name=Windows kvalifisert domenenavn (Automatic Translation)
 x509-subject-name=X509 emne navn (Automatic Translation)
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Du må konfigurere minst én identitet leverandør tilkobling for SAML-funksjonen. (Automatic Translation)
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
