--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_pl.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_pl.properties
@@ -24,7 +24,9 @@ delete-certificate=Usuwanie certyfikatu (Automatic Translation)
 download-certificate=Pobierz certyfikat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Szyfrowane (Automatic Translation)
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Certyfikat szyfrowania i klucz prywatny (Automatic Translation)
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Jednostki (Automatic Translation)
 entity-id-help=Identyfikator jednostki jest unikatowy identyfikator, który może być maksymalnie 1024 znaków. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Identyfikator jednostki musi być ustawiona przed klucz prywatny i certyfikat mogą być generowane. (Automatic Translation)
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Nazwa identyfikatora atrybut typu (Automatic Tran
 name-identifier-format=Format identyfikatora nazwy (Automatic Translation)
 new-identity-provider=Nowy dostawca tożsamości (Automatic Translation)
 new-service-provider=Nowy dostawca usług (Automatic Translation)
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Jednostka organizacyjna (Automatic Translation)
 persistent=Trwałe (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Należy utworzyć poświadczenia podpisywania przed włączeniem. (Automatic Translation)
@@ -80,6 +84,7 @@ service-provider-defaults=Ustawień domyślnych usługi dostawcy (Automatic Tran
 service-provider-metadata-help=Podać adres URL do metadanych dostawcy usługi lub przesłać pliku XML metadanych. Jeśli podasz adres URL metadanych jest okresowo aktualizowane. Upewnij się, że metadane zawiera certyfikat podpisywania usługodawcy. (Automatic Translation)
 signature-algorithm=Algorytm podpisu (Automatic Translation)
 subject-dn=Przedmiotem DN (Automatic Translation)
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Istnieją nie dostawców tożsamości. (Automatic Translation)
 there-are-no-service-providers=Istnieją żadni usługodawcy. (Automatic Translation)
 transient=Przemijające (Automatic Translation)
@@ -94,3 +99,7 @@ validity-days=Ważności (dni) (Automatic Translation)
 windows-domain-qualified-name=Kwalifikowaną nazwę domeny systemu Windows (Automatic Translation)
 x509-subject-name=Nazwa podmiotu x509 (Automatic Translation)
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Należy skonfigurować co najmniej jedną tożsamość połączenia dostawcy dla SAML do funkcji. (Automatic Translation)
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
