--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_sl.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_sl.properties
@@ -24,7 +24,9 @@ delete-certificate=Brisanje certifikata (Automatic Translation)
 download-certificate=Prenesi potrdilo (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Šifrirano (Automatic Translation)
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=Šifrirno potrdilo in zasebni ključ (Automatic Translation)
+encryption-forced=Force Encryption (Automatic Copy)
 entity=Subjekt (Automatic Translation)
 entity-id-help=ID entitete je Enolični identifikator, ki ne sme presegati 1024 znakov. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=ID entitete mora biti nastavljena pred zasebni ključ in certifikat moči sploditi. (Automatic Translation)
@@ -55,6 +57,8 @@ name-identifier-attribute-type=Ime identifikatorja atribut vrste (Automatic Tran
 name-identifier-format=Ime identifikatorja zapisa (Automatic Translation)
 new-identity-provider=Nov ponudnik identitet (Automatic Translation)
 new-service-provider=Novega ponudnika storitev (Automatic Translation)
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=Organizacijska enota (Automatic Translation)
 persistent=Vztrajno (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Preden omogočite ustvarite poverilnic za podpisovanje. (Automatic Translation)
@@ -80,6 +84,7 @@ service-provider-defaults=Privzete nastavitve ponudnika storitev (Automatic Tran
 service-provider-metadata-help=Zagotoviti bodisi URL metapodatkov ponudnika storitev ali naloži metapodatke XML datoteko. Ko vnesete URL, se redno posodabljajo metapodatke. Preverite, ali so metapodatki vsebuje podpisno potrdilo ponudnika storitev. (Automatic Translation)
 signature-algorithm=Algoritem za podpis (Automatic Translation)
 subject-dn=Predmet DN (Automatic Translation)
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=Obstaja noben ponudnik identitete. (Automatic Translation)
 there-are-no-service-providers=Obstaja noben ponudnik storitev. (Automatic Translation)
 transient=Prehodni (Automatic Translation)
@@ -94,3 +99,7 @@ validity-days=Veljavnosti (dni) (Automatic Translation)
 windows-domain-qualified-name=Kvalificirano ime domene Windows (Automatic Translation)
 x509-subject-name=X509 predmet ime (Automatic Translation)
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Konfigurirajte povezavo vsaj ena identiteta ponudnika za SAML funkcijo. (Automatic Translation)
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
