--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
@@ -24,7 +24,9 @@ delete-certificate=删除证书
 download-certificate=下载证书
 dsa=DSA
 encrypted=加密
+encryption=Encryption (Automatic Copy)
 encryption-certificate-and-private-key=加密证书和私钥
+encryption-forced=Force Encryption (Automatic Copy)
 entity=实体
 entity-id-help=实体 ID 是一个唯一标识符，最大长度为 1024 个字符。
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=必须首先设置实体 ID，然后才能生成私钥和证书。
@@ -55,6 +57,8 @@ name-identifier-attribute-type=名称标识符属性类型
 name-identifier-format=名称标识符格式
 new-identity-provider=新身份提供商
 new-service-provider=新服务提供商
+not-x=Not {0}? (Automatic Copy)
+only-known-users-are-allowed-to-sign-in-using-saml=Only known users are allowed to sign in using SAML. (Automatic Copy)
 organization-unit=组织单位
 persistent=持续
 please-create-a-signing-credential-before-enabling=请在启用之前创建签名凭据。
@@ -80,6 +84,7 @@ service-provider-defaults=服务提供商默认值
 service-provider-metadata-help=提供服务提供商元数据的 URL，或者上传元数据 XML 文件。当您提供 URL 时，元数据将定期更新。确保元数据包含服务提供商的签名证书。
 signature-algorithm=签名算法
 subject-dn=主题 DN
+the-email-address-associated-with-your-saml-account-cannot-be-used-to-register-a-new-user-because-its-email-domain-is-reserved=The email address associated with your saml account cannot be used to register a new user because its email domain is reserved. (Automatic Copy)
 there-are-no-identity-providers=没有身份提供商。
 there-are-no-service-providers=没有服务提供商。
 transient=瞬态
@@ -94,3 +99,7 @@ validity-days=有效期（天）
 windows-domain-qualified-name=Windows 域限定名称
 x509-subject-name=X509 主题名称
 you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=您必须至少配置一个身份提供商连接才能使 SAML 正常运行。
+your-contact-name-is-incomplete-or-invalid=Your contact name is incomplete or invalid. (Automatic Copy)
+your-email-address-is-incomplete-or-invalid=Your email address is incomplete or invalid. (Automatic Copy)
+your-screen-name-is-incomplete-or-invalid=Your screen name is incomplete or invalid. (Automatic Copy)
+your-user-x-could-not-be-logged-in=Your user {0} could not be logged in. (Automatic Copy)
