--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ar.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ar.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=مصادقة متعددة العوامل
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=كلمة مرور لمرة واحدة عبر البريد الإلكتروني
 failed-to-send-email=فشل إرسال البريد الإلكتروني.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=مصادقة متعددة العوامل
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=يرجى إدخال كلمة المرور لمرة واحدة من البريد الإلكتروني.
 your-one-time-password-will-be-sent-to-your-email-address=سيتم إرسال كلمة المرور لمرة واحدة إلى عنوان البريد الإلكتروني الخاص بك.
 your-otp-has-been-sent-by-email=تم إرسال كلمة المرور لمرة واحدة الخاصة بك بواسطة البريد الإلكتروني.
