--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ca.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Autenticació multifactorial
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Contrasenya de correu electrònic única
 failed-to-send-email=S'ha produït un error en enviar el correu electrònic.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Autenticació multifactorial
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Introduïu la contrasenya d'un sol ús del correu electrònic.
 your-one-time-password-will-be-sent-to-your-email-address=S'enviarà la contrasenya d'un sol ús a la vostra adreça electrònica.
 your-otp-has-been-sent-by-email=La contrasenya d'un sol ús s'ha enviat per correu electrònic.
