--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_de.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Mehrstufige Authentifizierung
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=E-Mail mit Einmalpasswort
 failed-to-send-email=E-Mail konnte nicht gesendet werden.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Mehrstufige Authentifizierung
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Bitte geben Sie das Einmalpasswort aus der E-Mail ein.
 your-one-time-password-will-be-sent-to-your-email-address=Ihr Einmalkennwort wird an Ihre E-Mail Adresse gesendet.
 your-otp-has-been-sent-by-email=Ihr Einmalkennwort wurde per E-Mail versendet.
