--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_fr.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Double authentification
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Envoyer le mot de passe unique par e-mail
 failed-to-send-email=Échec de l'envoi de l'e-mail.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Double authentification
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Veuillez saisir le mot de passe à usage unique trouvé dans l'e-mail.
 your-one-time-password-will-be-sent-to-your-email-address=Votre mot de passe à usage unique sera envoyé à votre adresse e-mail.
 your-otp-has-been-sent-by-email=Votre mot de passe à usage unique a été envoyé par e-mail.
