--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ja.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=多要素認証
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=メールワンタイムパスワード
 failed-to-send-email=メールを送信できませんでした。
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=多要素認証
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=メールで届いたワンタイムパスワードを入力してください。
 your-one-time-password-will-be-sent-to-your-email-address=ワンタイムパスワードはあなたのメールアドレスに送信されます。
 your-otp-has-been-sent-by-email=ワンタイムパスワードがメールで送信されました。
