--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ko.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_ko.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Multi-Factor Authentication
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Email One-Time Password
 failed-to-send-email=Failed to send email.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=멀티 팩터 인증
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Please enter the one-time password from the email.
 your-one-time-password-will-be-sent-to-your-email-address=Your one-time password will be sent to your email address.
 your-otp-has-been-sent-by-email=Your one-time password has been sent by email.
