--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_nl.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Meervoudige authenticatie
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Eenmalig wachtwoord verzenden per e-mail
 failed-to-send-email=E-mail verzenden mislukt.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Meervoudige authenticatie
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Voer het eenmalige wachtwoord van het e-mailbericht in.
 your-one-time-password-will-be-sent-to-your-email-address=Uw eenmalige wachtwoord wordt verzonden naar uw e-mailadres.
 your-otp-has-been-sent-by-email=Uw eenmalige wachtwoord werd per e-mail verzonden.
