--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_zh_CN.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=多重身份验证
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=电子邮件一次性密码
 failed-to-send-email=无法发送电子邮件。
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=多重身份验证
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=请输入电子邮件中的一次性密码。
 your-one-time-password-will-be-sent-to-your-email-address=您的一次性密码将发送到您的电子邮件地址。
 your-otp-has-been-sent-by-email=您的一次性密码已通过电子邮件发送。
