--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_en_AU.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Multi-Factor Authentication (Automatic Copy
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Email One-Time Password (Automatic Copy)
 failed-to-send-email=Failed to send email. (Automatic Copy)
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Multi-Factor Authentication (Automatic Copy)
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Please enter the one-time password from the email. (Automatic Copy)
 your-one-time-password-will-be-sent-to-your-email-address=Your one-time password will be sent to your email address. (Automatic Copy)
 your-otp-has-been-sent-by-email=Your one-time password has been sent by email. (Automatic Copy)
