--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_es.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Autenticación multifactor
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Contraseña de un solo uso de correo electrónico
 failed-to-send-email=No se pudo enviar el correo electrónico.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Autenticación multifactor
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Escriba la contraseña de un solo uso del correo electrónico.
 your-one-time-password-will-be-sent-to-your-email-address=Enviaremos la contraseña de un solo uso a su dirección de correo electrónico.
 your-otp-has-been-sent-by-email=Hemos enviado la contraseña de un solo uso por correo electrónico.
