--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_fi.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Monivaiheinen Todennus
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Lähetä Kertakäyttöinen Salasana Sähköpostilla
 failed-to-send-email=Sähköpostin lähetys epäonnistui.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Monivaiheinen Todennus
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Anna kertakäyttöinen salasana sähköpostista.
 your-one-time-password-will-be-sent-to-your-email-address=Kertakäyttöinen salasanasi lähetetään antamaasi sähköpostiosoitteeseen.
 your-otp-has-been-sent-by-email=Kertakäyttöinen salasanasi on lähetetty sähköpostilla.
