--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_hu.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Többtényezős hitelesítés
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Egyszeri jelszó küldése e-mailben
 failed-to-send-email=Az üzenet küldése sikertelen.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Többtényezős hitelesítés
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Adja meg az e-mailben kapott egyszeri jelszót.
 your-one-time-password-will-be-sent-to-your-email-address=Az egyszeri jelszavát elküldjük az e-mail címére.
 your-otp-has-been-sent-by-email=Az egyszeri jelszavát elküldtük e-mailben.
