--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_nb.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_nb.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Multifaktor autentisering
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Email One-Time Password
 failed-to-send-email=Epostutsending feilet.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Multifaktorautentisering
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Vennligst angi engangspassordet sendt på epost.
 your-one-time-password-will-be-sent-to-your-email-address=Ditt engangspassord blir sent til din epostadresse.
 your-otp-has-been-sent-by-email=Ditt engangspassord er blitt sent på epost.
