--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_pt_BR.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Autenticação Multifator
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Senha única de e-mail
 failed-to-send-email=Não foi possível enviar o e-mail.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Autenticação Multifator
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Por favor, insira a senha única enviada por e-mail.
 your-one-time-password-will-be-sent-to-your-email-address=Sua senha única será enviada para seu endereço de e-mail.
 your-otp-has-been-sent-by-email=Sua senha única foi enviada por e-mail.
