--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_sv.properties
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-email-otp-web/src/main/resources/content/Language_sv.properties
@@ -2,6 +2,7 @@ category.multi-factor-authentication=Multifaktorautentisering
 com.liferay.multi.factor.authentication.email.otp.web.internal.checker.EmailOTPBrowserMFAChecker=Engångslösenord för e-post
 failed-to-send-email=Det gick inte att skicka e-post.
 javax.portlet.title.com_liferay_multi_factor_authentication_portlet_web_internal_portlet_MFAEmailOTPVerifyPortlet=Multifaktorautentisering
+maximum-allowed-attemps-error=You have reached the maximum allowed failed attempts, please retry again in {0} seconds. (Automatic Copy)
 please-enter-the-otp-from-the-email=Ange engångslösenordet som du fått via e-post.
 your-one-time-password-will-be-sent-to-your-email-address=Ditt engångslösenord kommer att skickas till din e-postadress.
 your-otp-has-been-sent-by-email=Ditt engångslösenord har skickats via e-post.
